--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ body {
 
 .main_content_text {
     color: black;
-    max-width: 60%;
+    max-width: 80%;
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 20px;
@@ -128,6 +128,7 @@ ol {
 .inner-list {
     list-style-type: circle;
     color: #3f3f3f;
+    text-align: left;
 }
 
 /*table borders*/
